--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ input {
     display: flex;
     /* align-items: center; */
     justify-content: center;
-    /* height: 100vh; */
+    min-height: 100vh;
     flex-wrap: wrap;
     background-size: cover;
     background-image: url("https://images.pexels.com/photos/590493/pexels-photo-590493.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
